<resources>
    <string name="app_name">Resty</string>

    <!-- Main Login Page Strings -->
    <string name="loginUsernameInputHint">email</string>
    <string name="loginPasswordInputHint">password</string>
    <string name="loginButtonTitle">Log In</string>
    <string name="loginSignupButtonTitle">Sign up</string>
    <string name="loginToResty">Log in to Resty</string>

    <!-- Signup Page Strings -->
    <string name="restaurantIDHint">Restaurant ID</string>
    <string name="signupForResty">Sign up for Resty</string>
    <string name="staffAccountOnly">Staff Account Only</string>
    <string name="signupButtonTitle">Sign up</string>

    <!-- Menu Strings -->
    <string name="confirmOrder">Confirm Order?</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>


    <!-- Navbar Strings -->
    <string name="restaurant_menu">Restaurant Menu</string>
    <string name="map">Map</string>
    <string name="settings">Settings</string>

    <!-- Toolbar Strings -->
    <string name="action_shopping_cart">Shopping Cart</string>

    <!-- Authentication Screen -->
    <string name="authenticateTitle">Authenticate</string>

    <!-- Map -->
    <string name="title_activity_maps">Find Restaurants</string>
    <string name="findRestaurants">Find Restaurants</string>
    <string name="radius">5000</string>
    <string name="searchType">restaurants</string>

    <!-- Settings -->
    <string name="logout">LOGOUT</string>

    <!-- Permissions -->
    <string name="permission_rationale_location">
    Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.
    </string>
    <string name="location_permission_denied">
    This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings > Apps > \'Google Maps API Demos\'.
    </string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="initBluetooth">Connect to Hub</string>
    <string name="enterPin">Enter Table Pin</string>
    <string name="title_activity_staff_pickusage">staffPickusageActivity</string>


</resources>
