<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context="cpen391.resty.resty.activities.HubAuthenticationFragment">

    <EditText
        android:id="@+id/tablePin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="99dp"
        android:ems="10"
        android:hint="@string/enterPin"
        android:inputType="phone"
        android:maxLength="4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/authenticate"
        android:layout_width="146dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimaryLight"
        android:text="@string/authenticateTitle"
        android:textColor="@android:color/white"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tablePin" />

    <Button
        android:id="@+id/initBluetooth"
        android:layout_width="146dp"
        android:layout_height="45dp"
        android:layout_marginBottom="240dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/initBluetooth"
        app:layout_constraintHorizontal_bias="0.5"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/authenticate"
        tools:layout_editor_absoluteY="212dp" />
</android.support.constraint.ConstraintLayout>
